# cmake-example

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
src/: helloworld.cpp
